--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "lint": "prettier --check \"src/**/*.{ts,js}\""
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "phoenix": "^1.5.4",
+    "uid": "^1.0.0"
   },
   "devDependencies": {
     "@snowpack/plugin-run-script": "^2.1.0",
     "@types/canvas-confetti": "^1.0.0",
+    "@types/phoenix": "^1.5.0",
     "@types/snowpack-env": "^2.3.0",
     "prettier": "^2.0.5",
     "snowpack": "^2.8.0",
