--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@byog/sdk",
   "version": "1.0.0",
-  "description": "",
+  "description": "SDK for BYOG games & apps",
   "main": "./dist/index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/primeminddigital/byog-sdk.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Po Chen",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/primeminddigital/byog-sdk/issues"
