--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@byog/sdk",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "SDK for BYOG games & apps",
-  "main": "./dist/index.js",
+  "main": "./index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode production --devtool sourcemap",
+    "build": "tsc && rollup -c rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/primeminddigital/byog-sdk#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/phoenix": "^1.5.0",
+    "rollup": "^2.26.4",
+    "rollup-plugin-terser": "^7.0.0",
     "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "phoenix": "^1.5.4",
