--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "importsNotUsedAsValues": "error",
     "isolatedModules": true,
     "declaration": true,
-    "declarationDir": "./dist",
+    "sourceMap": true,
 
     "strict": true,
     "skipLibCheck": true,
